<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2C8F31"
            android:gravity="center"
            android:text="@string/write"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/submittv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="#2C8F31"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">


            <RadioGroup
                android:id="@+id/bottomKind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/out" />

                <RadioButton
                    android:id="@+id/radio_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/in" />
            </RadioGroup>
        </LinearLayout>
    <EditText
        android:id="@+id/money_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/money"
        android:inputType="number|numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="left"
        android:hint="@string/detail"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/add_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#9F51B73A"
        android:enabled="true"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="8"
        android:scrollbars="vertical"
        android:textSize="20sp"
        android:padding="5dp"/>

    </LinearLayout>
</LinearLayout>