<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">


            <RadioGroup
                android:id="@+id/bottomKind_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_out_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/out" />

                <RadioButton
                    android:id="@+id/radio_in_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/in" />
            </RadioGroup>
        </LinearLayout>
        <EditText
            android:id="@+id/money_sum_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/money"
            android:inputType="number|numberDecimal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/title1_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="left"
            android:hint="@string/detail"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_detail_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#9F51B73A"
            android:enabled="true"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="7"
            android:minLines="5"
            android:scrollbars="vertical"
            android:textSize="20sp"
            android:padding="5dp"/>

        <Button
            android:id="@+id/submit_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="#A5B3A5"
            android:gravity="center"
            android:text="@string/ok"
            android:onClick="edit"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>