<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".show"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/show_kind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kind"
            android:layout_weight="5"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/kind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kind"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>
    <View
        android:id="@+id/strut"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:background="#E8777272" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/show_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:layout_weight="5"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/mon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="money"
            android:textSize="15sp" />
    </LinearLayout>
    <View
        android:id="@+id/strut1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:background="#E8777272" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/show_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/date"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="date"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>
    <View
        android:id="@+id/strut2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:background="#E8777272" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/show_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/title1"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="#000000"
            android:text="@string/detail"
            android:textSize="15sp" />
    </LinearLayout>
    <View
        android:id="@+id/strut3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:background="#E8777272" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:onClick="edit"
            android:text="@string/edit"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btndelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="deletebyid"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textSize="15sp" />
    </LinearLayout>


</LinearLayout>