<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="date"
            android:textColor="#E8777272"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/item_kind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/kind"
            android:textColor="#E8777272"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/item_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/detail"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/item_money"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:layout_weight="3"
            android:text="@string/money"
            android:textColor="#2C8F31"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>