<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2C8F31"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/out_sum_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/out_sum"
                android:textColor="#E8000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/out_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/out_sum"
                android:textColor="#E8000000"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/in_sum_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/in_sum"
                android:textColor="#E8000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/in_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/in_sum"
                android:textColor="#E8000000"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/record_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00615A5A"
        android:padding="10dp" />

    <TextView
        android:id="@+id/nodata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/nodata"
        android:textSize="20sp" />
</LinearLayout>